fixed scrollbar on bottom chart

--- a/public/css/entry.css
+++ b/public/css/entry.css
@@ -61,9 +61,8 @@ a:hover{
 #background{
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-image: url('../images/bg-dimmed.jpg');
 	width: 100%;
-	height: 95%;
+	height: 100%;
 }
 .divider{
 	width:100%;
@@ -76,9 +75,7 @@ a:hover{
 	font-size:1.5em;
 	border-radius: 5px;
 	background-color: #ffffff;
-	opacity: 0.6;
-	filter: alpha(opacity=60); /* For IE8 and earlier */
-	padding-bottom: -20%;
+	font-weight:bold;
 }
 #section0{
 	height:100%;
@@ -158,7 +155,6 @@ h2{
 	position: relative;
 	width:80%;
 	text-align: center;
-
 }
 #s2container h2{
 	text-align: center;
